--- a/GeraAlerta/geraAlerta/geraAlertaAPS.rmd
+++ b/GeraAlerta/geraAlerta/geraAlertaAPS.rmd
@@ -24,6 +24,14 @@ d<-read.csv(dadosAPS)
 
 **Curvas epidemicas da dengue por APS (periodo: 2010-)**
 
+```{r echo=FALSE}
+# identificando a ultima semana com casos
+dc <- d[d$APS=="AP1",c("SE","casos")]
+dc <-na.omit(dc)
+uSE <- max(dc$SE)
+```
+
+Os ultimos dados disponiveis de casos de dengue se referem a'semana `r uSE`:
 
 ```{r echo=FALSE}
 # Grafico das curvas epidemicas por APS
@@ -46,19 +54,6 @@ for (j in 3:11) {
       }
 ```
 
-```{r echo=FALSE}
-# identificando a ultima semana com casos
-dc <- d[d$APS=="AP1",c("SE","casos")]
-dc <-na.omit(dc)
-uSE <- max(dc$SE)
-```
-
-Os ultimos dados disponiveis de casos de dengue se referem a'semana `r uSE`:
-
-```{r echo=FALSE}
-tapply(d$casos[d$SE==max(d$SE)],d$APS[d$SE==uSE],sum)
-```
-
 
 ```{r echo=FALSE}
 # Calcula Rt(dengue) e Rt(tweets)
@@ -67,37 +62,70 @@ SE<-d$SE[d$APS=="AP1"]
 
 d2 <- expand.grid(SE=SE,APS=listaAPS)
 d2$Rt<-NA
-d2$Rtw<-NA
+d2$p1 <- NA
+d2$Rtlwr <- NA
+d2$Rtupr <- NA
 
-# Rt(dengue)
-for(i in 1:10) d2$Rt[d$APS==listaAPS[i]] <- Rt((d$casos[d$APS==listaAPS[i]]))
+
+# Rt(dengue) com IC
+for(i in 1:10) {
+  #d2$Rt[d$APS==listaAPS[i]] <- Rt((d$casos[d$APS==listaAPS[i]]))
+  d2[d$APS==listaAPS[i],3:6] <- Rt.beta((d$casos[d$APS==listaAPS[i]]))
+  }
+
+d2$Rtw<-NA
+d2$p1w <-NA
+d2$Rtwlwr <-NA
+d2$Rtwupr <-NA
+
 # Rt (tweet)
-for(i in 1:10) d2$Rtw[d$APS==listaAPS[i]] <- Rt(d$tweets[d$APS==listaAPS[i]],tg=2)
+for(i in 1:10) {
+#for(i in 1:10) d2$Rtw[d$APS==listaAPS[i]] <- Rt(d$tweets[d$APS==listaAPS[i]],tg=2)
+  d2[d$APS==listaAPS[i],7:10] <- Rt.beta(d$tweets[d$APS==listaAPS[i]])
+  }
 
 d2$Rt[is.infinite(d2$Rt)]<-0
 d2$Rtw[is.infinite(d2$Rtw)]<-0
+
 ```
 
+
+**Rt(dengue) com intervalo de confiança**
 
 ```{r  echo=FALSE}
-# Grafico de Rt(dengue). nao esta funciona no html.
-#par(mfrow=c(5,2),mar=c(1,2,1,1))
-#plot(d2$Rt[d2$APS=="AP1"],ylim=range(0.3,3),xlab="",ylab="Rt",axes=FALSE,type="l")
-#    mtext(listaAPS[1],cex=0.8,line=-1)
-#    axis(2)
-#    abline(h=1,col=2)
-#    box()
+# Grafico de Rt(dengue). 
 
-#for (j in 2:10) {
-#      plot(d2$Rt[d2$APS==listaAPS[j]],ylim=range(0.3,3),xlab="",ylab="Rt",axes=FALSE,type="l")
-#      axis(2)
-#      mtext(listaAPS[(j-1)],cex=0.8,line=-1)
-#      box()
-#      abline(h=1,col=2)
-#      }
+par(mfrow=c(5,2),mar=c(1,2,1,1))
+for (j in 1:10) {
+      plot(d2$Rt[d2$APS==listaAPS[j]],ylim=range(0.3,3),xlab="",ylab="Rt",axes=FALSE,type="l")
+      lines(d2$Rtlwr[d2$APS==listaAPS[j]],lty=2)
+      lines(d2$Rtupr[d2$APS==listaAPS[j]],lty=2)
+
+      axis(2)
+      mtext(listaAPS[(j)],cex=0.8,line=-1)
+      box()
+      abline(h=1,col=2)
+      }
 ```
 
+**Probabilidade do Rt>1**
+```{r  echo=FALSE}
+# Grafico de Prob(Rt>1)
+par(mfrow=c(5,2),mar=c(1,2,1,1))
+for (j in 1:10) {
+      plot(d2$p1[d2$APS==listaAPS[j]],ylim=range(0,1),xlab="",ylab="Rt",axes=FALSE,type="l")
+      axis(2)
+      mtext(listaAPS[(j)],cex=0.8,line=-1)
+      box()
+      abline(h=0.8,col=2)
+      }
+
+```
+
+
 **Tweet na cidade**
+
+
 
 ```{r echo=FALSE}
 # identificando a ultima semana de tweet
@@ -109,39 +137,27 @@ uSE <- max(dc$SE)
 Os ultimos dados disponiveis de tweet sao da semana `r uSE`:
 
 ```{r echo=FALSE}
+par(mfrow=c(2,1),mar=c(1,4,1,1))
 tail(d)[,c(1,2)]
-par(mfrow=c(1,1),mar=c(4,4,4,1))
 plot(d$tweets[d$APS=="AP1"],type="l",ylab="tweets",axes=FALSE,xlab="")
 axis(2)
+#plot(d2$Rtw[d$APS=="AP1"],type="l",ylab="tweets",axes=FALSE,xlab="")
+#lines(d2$Rtwlwr[d$APS=="AP1"],lty=2)
+#lines(d2$Rtwupr[d$APS=="AP1"],lty=2)
+#axis(2)
+#abline(h=1,col=2)
+plot(d2$p1w[d$APS=="AP1"],type="l",ylab="p(Rtw>1)")
+abline(h=0.8,col=2)
 ```
 
 
 ```{r echo=FALSE}
 #Juntando dados de temperatura
-d3<-merge(d2,d[,c("SE","APS","tweets","casos","temp.mean","temp.sd","temp.min","temp.max",
+d3<-merge(d2,d[,c("SE","APS","tweets","estacao","casos","temp.sd","temp.min","temp.max",
                   "umid.mean","umid.sd","umid.min","umid.max")],by=c("SE","APS"),all=TRUE)
 ```
 
 **Temperatura**
-
-
-```{r  echo=FALSE}
-#par(mfrow=c(5,2),mar=c(1,2,2,1))
-#plot(d3$temp.min[d3$APS=="AP1"],xlab="",ylab="tmin",ylim=c(16,30),axes=FALSE,type="l")
-#    mtext("tmin")
-#    mtext(listaAPS[1],cex=0.8,line=-1)
-#    axis(2)
-#    abline(h=24,col=2)
-#    box()
-
-#for (j in 2:10) {
-#      plot(d3$temp.min[d3$APS==listaAPS[j]],xlab="",ylab="tmin",ylim=c(16,30),axes=FALSE,type="l")
-#      axis(2)
-#      mtext(listaAPS[j],cex=0.8,line=-1)
-#      box()
-#      abline(h=24,col=2)
-#      }
-```
 
 ```{r echo=FALSE}
 # identificando a ultima semana de tweet
@@ -156,74 +172,43 @@ Os ultimos dados disponiveis de temperatura minima sao da semana `r uSE`.
 tapply(d3$temp.min[d3$SE==max(d3$SE)],d3$APS[d3$SE==max(d3$SE)],sum)
 ```
 
-      
-
-Modelo de alerta com 3 indicadores
-========
-
-- Temperatura minima semanal > 22 graus  : condicoes propicias para o desenvolvimento do vetor
-- Rt > 1 : casos com tendencia de aumento
-- Casos > Media + 1.96dp : casos acima de (calculado para todo o periodo 2010-presente) 
-
-
-**1. Estimando Rt (dengue) a partir dos dados de tweet e clima**
-
-Como os dados de dengue sao em geral atrasados em relacao aos tweets e a temperatura, o sistema estima o Rt da dengue 
-utilizando um modelo de regressao linear com as variaveis Rt (tweets) e temperatura. O modelo e ajustado a toda a serie 
-historica e usado para estimar os valores faltantes de Rt(dengue).
-
-*Rtd(SE) = b0 + b1xRtw(SE) + b2xtemp.min(SE) + b3xRtw(SE)xtemp.min(SE) + error**
-
-No grafico abaixo:
-
-- preto = serie observada de Rt(dengue)
-- vermelha = serie predita pelo modelo 
-
-```{r echo=FALSE}
-d3$Rt_est<-NA
-for(i in 1:10){
-    # ajusta modelo
-    mod<-lm(Rt~Rtw*temp.min,data=d3,subset=d3$APS==listaAPS[i], na.action=na.exclude)
-    # predito
-    new = data.frame(Rtw=d3$Rtw[d3$APS==listaAPS[i]],temp.min=d3$temp.min[d3$APS==listaAPS[i]])
-    d3$Rt_est[d3$APS==listaAPS[i]]<-predict(mod,newdata=new)
-    assign(make.names(listaAPS[i]),mod)
-}
-modRt<-list(AP1=AP1,AP2.1=AP2.1,AP2.2=AP2.2,AP3.1=AP3.1,AP3.2=AP3.2,
-           AP3.3=AP3.3,AP4=AP4,AP5.1=AP5.1,AP5.2=AP5.2,AP5.3=AP5.3)
-```
-
-
 ```{r  echo=FALSE}
-par(mfrow=c(5,2),mar=c(0,0,0,0))
-plot(d3$Rt[d3$APS=="AP1"],xlab="",ylab="Rt",ylim=c(0,3),axes=FALSE,type="l")
-    lines(d3$Rt_est[d3$APS=="AP1"],col=2)
-    mtext("Rt")
+par(mfrow=c(5,2),mar=c(1,2,2,1))
+plot(d3$temp.min[d3$APS=="AP1"],xlab="",ylab="tmin",ylim=c(16,30),axes=FALSE,type="l")
+    mtext("tmin")
     mtext(listaAPS[1],cex=0.8,line=-1)
-    #axis(2)
+    axis(2)
     box()
 
 for (j in 2:10) {
-      plot(d3$Rt[d3$APS==listaAPS[j]],xlab="",ylab="Rt",ylim=c(0,3),axes=FALSE,type="l")
-      lines(d3$Rt_est[d3$APS==listaAPS[j]],col=2)
-      #axis(2)
+      plot(d3$temp.min[d3$APS==listaAPS[j]],xlab="",ylab="tmin",ylim=c(16,30),axes=FALSE,type="l")
+      axis(2)
       mtext(listaAPS[j],cex=0.8,line=-1)
       box()
       }
 ```
 
 
-```{r echo=FALSE}
+      
+
+Modelo de alerta com 3 indicadores
+========
+
+- Temperatura minima semanal > 22 graus  : condicoes propicias para o desenvolvimento do vetor
+- p(Rt > 1)>0.8 : semana com alta probabilidade de Rt>1
+- Casos > miliar (por fazer) 
+
+
+```{r}
 #Rt_est>1
-d3$alertaRt1 <-ifelse(d3$Rt_est>1,1,0)
+d3$alertaRt1 <-ifelse(d3$p1>0.8,1,0)
 ```
 
 
-```{r echo=FALSE}
+```{r}
 #Temperatura > Tcrit
-d3$temp <- d3$temp.min
 d3$temp_crit <- 22
-d3$alertaTemp <-ifelse(d3$temp>d3$temp_crit,1,0)
+d3$alertaTemp <-ifelse(d3$temp.min>d3$temp_crit,1,0)
 ```
 
 
@@ -231,71 +216,76 @@ d3$alertaTemp <-ifelse(d3$temp>d3$temp_crit,1,0)
 #Estimacao de casos a partir do Rt: casos(t+1)=casos(t)*Rt
 d3$casos_est<-NA
 
-d4<-subset(d3,APS=="AP1")
-le = dim(d4)[1]
-d4$casos_est[2:le]<-d4$casos[1:(le-1)]*d4$Rt_est[2:le]
+d4 <- d3  # tirar isso quando for atualizar esse indicador
+#d4<-subset(d3,APS=="AP1")
+#le = dim(d4)[1]
+#d4$casos_est[2:le]<-d4$casos[1:(le-1)]*d4$Rt_est[2:le]
 
-for(i in 2:10){
-      di<-subset(d3,APS==listaAPS[i])
-      di$casos_est[2:le]<-di$casos[1:(le-1)]*di$Rt_est[2:le]
-      d4 <- rbind(d4,di)
-}
-```
-
-**Serie de casos estimados**
-
-O alerta de epidemia dispara quando casos excedem o limiar "media + 1.96 dp". 
-O Rt(dengue) estimado previamente e' utilizado para reconstruir a curva epidemica e completar os dados 
-faltantes
-
-*casos(SE+1)=casos(SE)xRt_est(dengue)*
-
-O grafico abaixo mostra a serie de casos por APS nas ultimas 70 semanas.
-
-Legenda:
-- preto = dados do sinan 
-- vermelha = serie reconstruida de casos de dengue a partir do modelo 
-
-
-```{r echo=FALSE}
-le=length(d4$SE[d4$APS=="AP1"])
-xlim=c((le-70),le)
-par(mfrow=c(5,2),mar=c(2,2,0,0))
-plot(d4$casos[d4$APS=="AP1"][xlim[1]:xlim[2]],xlab="",ylab="Rt",axes=FALSE,type="l")
-      lines(d4$casos_est[d4$APS=="AP1"][xlim[1]:xlim[2]],col=2)
-      mtext(listaAPS[1],cex=0.8,line=-1)
-      axis(2)
-      seque = seq(1,(xlim[2]-xlim[1]),by=10) # label x
-      axis(1,at=seque,labels=d4$SE[d4$APS=="AP1"][seque])
-      box()
-
-for (j in 2:10) {
-      plot(d4$casos[d4$APS==listaAPS[j]][xlim[1]:xlim[2]],xlab="",ylab="Rt",axes=FALSE,type="l")
-      lines(d4$casos_est[d4$APS==listaAPS[j]][xlim[1]:xlim[2]],col=2)
-      axis(2)
-      mtext(listaAPS[j],cex=0.8,line=-1)
-      box()
-}
-
+#for(i in 2:10){
+ #     di<-subset(d3,APS==listaAPS[i])
+      #di$casos_est[2:le]<-di$casos[1:(le-1)]*di$Rt_est[2:le]
+#      d4 <- rbind(d4,di)
+#}
 ```
 
 
 
+
+
 ```{r echo=FALSE}
-#Casos > media+1.96dp**
-meaninc<-tapply(d$casos,d$APS,mean,na.rm=TRUE)
-sdinc<-tapply(d$casos,d$APS,sd,na.rm=TRUE)
-limiarinc<-meaninc+1.96*sdinc
+#**Serie de casos estimados** (essa parte toda precisa ser repensada)
 
-# Para cada APS, um casos_crit
-d4$casos_crit<-NA
-for (i in 1:dim(d4)[1]){
-      aps <- which(listaAPS==d4$APS[i])
-      d4$casos_crit[i] <- limiarinc[aps]
-}
+#O alerta de epidemia dispara quando casos excedem o limiar "media + 1.96 dp". 
+#O Rt(dengue) estimado previamente e' utilizado para reconstruir a curva epidemica e completar os dados 
+#faltantes
 
+#*casos(SE+1)=casos(SE)xRt_est(dengue)*
+
+#O grafico abaixo mostra a serie de casos por APS nas ultimas 70 semanas.
+
+#Legenda:
+#- preto = dados do sinan 
+#- vermelha = serie reconstruida de casos de dengue a partir do modelo 
+
+# le=length(d4$SE[d4$APS=="AP1"])
+# xlim=c((le-70),le)
+# par(mfrow=c(5,2),mar=c(2,2,0,0))
+# plot(d4$casos[d4$APS=="AP1"][xlim[1]:xlim[2]],xlab="",ylab="Rt",axes=FALSE,type="l")
+#       lines(d4$casos_est[d4$APS=="AP1"][xlim[1]:xlim[2]],col=2)
+#       mtext(listaAPS[1],cex=0.8,line=-1)
+#       axis(2)
+#       seque = seq(1,(xlim[2]-xlim[1]),by=10) # label x
+#       axis(1,at=seque,labels=d4$SE[d4$APS=="AP1"][seque])
+#       box()
+# 
+# for (j in 2:10) {
+#       plot(d4$casos[d4$APS==listaAPS[j]][xlim[1]:xlim[2]],xlab="",ylab="Rt",axes=FALSE,type="l")
+#       lines(d4$casos_est[d4$APS==listaAPS[j]][xlim[1]:xlim[2]],col=2)
+#       axis(2)
+#       mtext(listaAPS[j],cex=0.8,line=-1)
+#       box()
+# }
+
+```
+
+
+
+```{r echo=FALSE}
+# #Casos > media+1.96dp**
+# meaninc<-tapply(d$casos,d$APS,mean,na.rm=TRUE)
+# sdinc<-tapply(d$casos,d$APS,sd,na.rm=TRUE)
+# limiarinc<-meaninc+1.96*sdinc
+# 
+# # Para cada APS, um casos_crit
+ d4$casos_crit<-NA
+# for (i in 1:dim(d4)[1]){
+#       aps <- which(listaAPS==d4$APS[i])
+#       d4$casos_crit[i] <- limiarinc[aps]
+# }
+# 
 # Alerta:
-d4$alertaCasos<-ifelse(d4$casos_est>d4$casos_crit,1,0)
+#d4$alertaCasos<-ifelse(d4$casos_est>d4$casos_crit,1,0)
+d4$alertaCasos <- NA # tirar quando atualizar essa parte
 ```
 
 **Alerta por APS**
@@ -310,21 +300,25 @@ serao usados para criar o codigo de cores do alerta.
 listaAP <- unique(d4$APS)
 le = length(d4$temp.min[d4$APS==listaAP[1]])
 plot.alerta<-function(ap){
-      par(mfrow=c(3,1),mar=c(0,4,0,0))
-      plot(1:le,d4$temp.min[d4$APS==ap],type='l',axes=F,ylab="Temperatura>22")
-      text(100,0.99*max(d4$temp.min[d4$APS==ap],na.rm=TRUE),labels=as.character(ap),cex=1.4)
-      abline(v=which(d4$alertaTemp[d4$APS==ap]==1),col="grey",lwd=1.2)
+      par(mai=c(0,0,0,0),mar=c(4,4,1,1))
+      d4v <- subset(d4,APS==ap)
+      plot(1:le,d4v$casos,type="l",axes=F,ylab="casos",xlab="")
+      abline(v=which(d4v$alertaTemp==1),col="grey",lwd=1.2)
+      abline(v=which(d4v$alertaRt1==1),col="red",lwd=0.5,lty=2)
+      lines(1:le,d4v$casos)
+      title(as.character(ap),cex=1.4)
       axis(2)
+      axis(1,at=seq(1,length(d4v$SE),by=6),labels=d4$SE[seq(1,length(d4v$SE),by=6)],las=2)
       
-      plot(1:le,d4$Rt[d4$APS==ap],type='l',axes=F,col=1,ylim=c(0,3),ylab="Rt>1")
-      lines(1:le,d4$Rt_est[d4$APS==ap],col=2)
-      axis(2)
-      abline(v=which(d4$alertaRt1[d4$APS==ap]==1),col="grey",lwd=1.2)
+      #plot(1:le,d4$Rt[d4$APS==ap],type='l',axes=F,col=1,ylim=c(0,3),ylab="Rt>1")
+      #lines(1:le,d4$Rt_est[d4$APS==ap],col=2)
+      #axis(2)
+      #abline(v=which(d4$alertaRt1[d4$APS==ap]==1),col="grey",lwd=1.2)
       
-      plot(1:le,d4$casos_est[d4$APS==ap],type='l',axes=F,col=2,ylab="casos>media+2sd")
-      lines(1:le,d4$casos[d4$APS==ap])
-      axis(2)
-      abline(v=which(d4$alertaCasos[d4$APS==ap]==1),col="grey",lwd=1.2)
+      #plot(1:le,d4$casos_est[d4$APS==ap],type='l',axes=F,col=2,ylab="casos>media+2sd")
+      #lines(1:le,d4$casos[d4$APS==ap])
+      #axis(2)
+      #abline(v=which(d4$alertaCasos[d4$APS==ap]==1),col="grey",lwd=1.2)
 
 }
 ```
@@ -344,8 +338,8 @@ for(i in 1:10) {
 ```{r echo=FALSE}
 #Primeiro, cortar a parte final que nao tenha os 3 alertas:
       
-d4$test<- with(d4, alertaRt1+alertaTemp+alertaCasos)
-df <- d4[is.na(d4$test)==FALSE,c("SE","APS","casos","tweets","temp","Rt","casos_est","Rt_est","temp_crit","casos_crit","alertaRt1","alertaTemp","alertaCasos")]
+d4$test<- with(d4, alertaRt1+alertaTemp)
+df <- d4[is.na(d4$test)==FALSE,c("SE","APS","casos","tweets","temp","Rt","casos_est","temp_crit","casos_crit","alertaRt1","alertaTemp","alertaCasos")]
 ```
 
 ```{r echo=FALSE}
