--- a/GeraAlerta/organizaDados/organizatweets.rmd
+++ b/GeraAlerta/organizaDados/organizatweets.rmd
@@ -23,7 +23,7 @@ dant<-read.csv("../dados_limpos/tweets_week_2010-2013.csv")
 
 **Serie de 2014 de tweets diarios:**
 ```{r}
-comando<-paste("../../pega_tweets.py -i 2014-01-05 -f ",Sys.Date()) # primeira SE de 2014 ate hoje
+comando<-paste("../fun/pega_tweets.py -i 2014-01-05 -f ",Sys.Date()) # primeira SE de 2014 ate hoje
 system(comando)
 d<-read.csv("tweets_teste.csv",header=TRUE)[,1:2]
 names(d)[2]<-"rio"
