--- a/GeraAlerta/organizaDados/organizaTemperatura2.rmd
+++ b/GeraAlerta/organizaDados/organizaTemperatura2.rmd
@@ -8,7 +8,7 @@ todas as APS
 source("../fun/data2SE.r")
 ```
 
-Abre dados OpenWeather (Oswaldo): 
+Abre dados OpenWeather (autor: Oswaldo): 
 -----------
 
 ```{r}
@@ -20,56 +20,61 @@ Abre dados OpenWeather (Oswaldo):
 #d$estacao <- "galeao"
 #Incluir variavel semana epidemiologica
 
-d$SE<-data2SE(d$data,file="../tabelas/SE.csv",format="%Y-%m-%d")
+#d$SE<-data2SE(d$data,file="../tabelas/SE.csv",format="%Y-%m-%d")
 #head(d[,c("data","SE")])
 
+#Acumular por SE e estacao
+#df<-aggregate(d[,3:10],by=list(estacao=d$estacao,SE=d$SE),FUN=mean,na.rm=TRUE)
+#head(df)
+```
+
 ```
 
 
-Abre dados weather underground (Flavio)
+Abre dados weather underground (autor: Flavio)
 -----------------
 ```{r}
-d<-read.csv(file="../dados_brutos/clima/galeao.csv")
-tail(d)
-d$dia<-strsplit(as.character(d$DateUTC,"T"))
-```
+gal<-callmongoclima("galeao") 
+std <- callmongoclima("santosdumont")
+afo <- callmongoclima("afonsos")
+jac <- callmongoclima("jacarepagua")
 
+d<- rbind(gal,std,afo,jac)
+rm(gal,std,afo,jac)
 
-Acumular por SE e estacao
-```{r echo=FALSE}
-df<-aggregate(d[,3:10],by=list(estacao=d$estacao,SE=d$SE),FUN=mean,na.rm=TRUE)
+# Atribuir SE
+d$SE<-data2SE(d$data,file="../tabelas/SE.csv",format="%Y-%m-%d")
+
+# Agregar por semana
+df<-aggregate(d[,2:3],by=list(SE=d$SE,estacao=d$estacao),FUN=mean,na.rm=TRUE)
+
 head(df)
-```
-
-```{r echo=FALSE}
-tmin.ts <- xts(d$temp.min,as.Date(d$data))
-plot(tmin.ts,type="s")
-abline(h=24,lty=2,col=2)
+tail(df)
 ```
 
 
 ```{r echo=FALSE}
 #Estacao -> APS
 listaAPS<-c("AP1","AP2.1","AP2.2","AP3.1","AP3.2","AP3.3","AP4","AP5.1","AP5.2","AP5.3")
-dAP<-cbind(APS="AP1",df[df$estacao=="galeao",])
-dAP<-rbind(dAP,cbind(APS="AP2.1",df[df$estacao=="galeao",]))
-dAP<-rbind(dAP,cbind(APS="AP2.2",df[df$estacao=="galeao",]))
+dAP<-cbind(APS="AP1",df[df$estacao=="santosdumont",])
+dAP<-rbind(dAP,cbind(APS="AP2.1",df[df$estacao=="santosdumont",]))
+dAP<-rbind(dAP,cbind(APS="AP2.2",df[df$estacao=="santosdumont",]))
 dAP<-rbind(dAP,cbind(APS="AP3.1",df[df$estacao=="galeao",]))
 dAP<-rbind(dAP,cbind(APS="AP3.2",df[df$estacao=="galeao",]))
 dAP<-rbind(dAP,cbind(APS="AP3.3",df[df$estacao=="galeao",]))
-dAP<-rbind(dAP,cbind(APS="AP4",df[df$estacao=="galeao",]))
-dAP<-rbind(dAP,cbind(APS="AP5.1",df[df$estacao=="galeao",]))
-dAP<-rbind(dAP,cbind(APS="AP5.2",df[df$estacao=="galeao",]))
-dAP<-rbind(dAP,cbind(APS="AP5.3",df[df$estacao=="galeao",]))
+dAP<-rbind(dAP,cbind(APS="AP4",df[df$estacao=="jacarepagua",]))
+dAP<-rbind(dAP,cbind(APS="AP5.1",df[df$estacao=="afonsos",]))
+dAP<-rbind(dAP,cbind(APS="AP5.2",df[df$estacao=="afonsos",]))
+dAP<-rbind(dAP,cbind(APS="AP5.3",df[df$estacao=="afonsos",]))
 ```
 
 Salvar:
 ```{r echo=FALSE}
-outputfile = paste("../dados_limpos/temp_",max(dAP$SE),".csv",sep="")
+#outputfile = paste("../dados_limpos/temp_",max(dAP$SE),".csv",sep="")
 ```
 
-```{r}
-outputfile
+```{r echo=FALSE}
+#outputfile
 ```
 
 ```{r}
