--- a/GeraAlerta/geraAlerta/geraAlerta.rmd
+++ b/GeraAlerta/geraAlerta/geraAlerta.rmd
@@ -20,6 +20,11 @@ SEhoje <- data2SE(hoje,file="../tabelas/SE.csv",format="%Y-%m-%d")
 # Abre os dados mais recentes
 dadosAPS <- paste("../",dadosAPS,sep="")
 d<-read.csv(dadosAPS)
+d<-subset(d,SE>=201001)
+
+# corrige casos
+listaAPS<-unique(d$APS)
+for(i in 1:10) d$casosm[d$APS==listaAPS[i]] <-corrigecasos(d$casos[d$APS==listaAPS[i]])
 ```
 
 **Curvas epidemica da dengue na cidade**
@@ -37,15 +42,19 @@ Os ultimos dados disponiveis de casos de dengue se referem a'semana `r uSE`:
 
 ```{r echo=FALSE,results='hide'}
 # serie temporal de casos agregados na cidade
-casos <- aggregate(d[,c(4)],by=list(SE=d$SE),FUN=sum)
-casos$x = corrigecasos(casos$x) # corrige para atraso de digitacao
+casos <- aggregate(d[,"casos"],by=list(SE=d$SE),FUN=sum)
 tail(casos)
 
-plot(casos$x, type="l", xlab="",ylab="casos notificados no MRJ",axes=FALSE)
+casosm <- aggregate(d[,"casosm"],by=list(SE=d$SE),FUN=sum)
+tail(casosm)
 
+len=dim(casos)[1]
+plot(casos$x[(len-22):(len-3)], type="l", xlab="",ylab="casos notificados no MRJ")
+lines(casosm$x[(len-22):(len-3)], col=2)
+legend(5,75,c("digitado","notificado"),lty=1,col=1:2)
 axis(2)
-le = dim(casos)[1]
-axis(1,at=rev(seq(le,1,by=-12)),labels=casos$SE[rev(seq(le,1,by=-12))],las=2)
+
+#axis(1,at=rev(seq(le,1,by=-12)),labels=casos$SE[rev(seq(le,1,by=-12))],las=2)
 
 ```
 
@@ -54,8 +63,6 @@ axis(1,at=rev(seq(le,1,by=-12)),labels=casos$SE[rev(seq(le,1,by=-12))],las=2)
 #**Curvas epidemicas da dengue por APS**
 
 # Grafico das curvas epidemicas por APS
-listaAPS<-unique(d$APS)
-
 #par(mfrow=c(5,2),mar=c(1,1,1,1))
 
 #for (j in 1:10) {
@@ -86,7 +93,7 @@ le=dim(d)[1]
 axis(1,at=rev(seq(le,1,by=-12)),labels=d$SE[rev(seq(le,1,by=-12))],las=2)
 ```
 
-** Dados de temperatura mínima e máxima por APS**
+**Dados de temperatura minima por APS**
 
 ```{r echo=FALSE}
 # identificando a ultima semana de clima
@@ -97,31 +104,28 @@ uSE <- max(dc$SE)
 
 Os ultimos dados disponiveis de temperatura minima sao da semana `r uSE`. 
 
-```{r echo=FALSE,results='hide'}
+```{r echo=FALSE}
 tapply(d$temp.min[d$SE==max(dc$SE)],d$APS[d$SE==max(dc$SE)],unique)
 ```
 
 ```{r echo=FALSE,results='hide'}
 # preencher alguns dados faltantes com a media das outras estacoes
 m = which(is.na(d$temp.min))
-length(m)
 for (i in m) d$temp.min[i]<-(mean(d$temp.min[d$SE==d$SE[i]],na.rm=TRUE))
 m = which(is.na(d$temp.min))
-length(m)
-
 ```
 
 
 ```{r echo=FALSE,results='hide'}
 #dados de clima
-par(mfrow=c(5,2),mar=c(1,2,1,0))
-for (j in 1:10) {
-      plot(d$temp.min[d$APS==listaAPS[(j)]],xlab="",ylab="",ylim=c(5,40),axes=FALSE,type="l")
-      lines(d$temp.max[d$APS==listaAPS[(j)]])
-      axis(2)
-      mtext(listaAPS[(j)],cex=0.8,line=-1)
-      box()
-      }
+#par(mfrow=c(5,2),mar=c(1,2,1,0))
+#for (j in 1:10) {
+#      plot(d$temp.min[d$APS==listaAPS[(j)]],xlab="",ylab="",ylim=c(5,40),axes=FALSE,type="l")
+#      lines(d$temp.max[d$APS==listaAPS[(j)]])
+#      axis(2)
+#      mtext(listaAPS[(j)],cex=0.8,line=-1)
+#      box()
+#      }
 ```
 
 ```{r echo=FALSE}
@@ -140,20 +144,21 @@ for (j in 1:10) {
 ```
 
 
-Modelo de alerta com 5 indicadores
-========
-
-- AlertaCli = Temperatura minima semanal > 22 graus por 3 semanas
-- Alertatweet = crescimento significativo de tweet na ultima semana
-- AlertaRt =  (Rt > 1) por 3 semanas. Se nao houver notificacao, completar com o Rt dos tweets
-- AlertaCasos = Casos > limiar de epidemia (100 por 100.000) 
-- Rm = Mosquitos que aumentam significativamente (a fazer) 
 
 ```{r echo=FALSE}
+#Modelo de alerta com 4 indicadores
+#========
+
+#- AlertaCli = Temperatura minima semanal > 22 graus por 3 semanas
+#- Alertatweet = crescimento significativo de tweet na ultima semana
+#- AlertaRt =  (Rt > 1) por 3 semanas. Se nao houver notificacao, completar com o Rt dos tweets
+#- AlertaCasos = Casos > limiar de epidemia (100 por 100.000) 
+
+
 # data.frame para colocar os resultados
 SE<-d$SE[d$APS=="AP1"]
 d2 <- expand.grid(SE=SE,APS=listaAPS)
-d2<-merge(d2,d[,c("SE","APS","data","tweets","estacao","casos","temp.min")],by=c("SE","APS"))
+d2<-merge(d2,d[,c("SE","APS","data","tweets","estacao","casos","casosm","temp.min")],by=c("SE","APS"))
 # agregar dados de populacao (cuidado, desorganiza tudo!)
 pop<-read.csv(file="../tabelas/populacao2010porAPS_RJ.csv")
 d2<-merge(d2,pop)
@@ -203,11 +208,11 @@ Rtgreat1 <- function(p1,pcrit=0.8,lag=0){
 }
 
 
-# Rt(tweet) > 1 se Pr>0.9 
-for(i in 1:10) d2$twgreat1[d2$APS==listaAPS[i]] <-Rtgreat1(d2$ptw1[d2$APS==listaAPS[i]],pcrit=0.90,lag=0)
+# Rt(tweet) > 1 se Pr>0.8 
+for(i in 1:10) d2$twgreat1[d2$APS==listaAPS[i]] <-Rtgreat1(d2$ptw1[d2$APS==listaAPS[i]],pcrit=0.80,lag=0)
 
 # alertaRtweet = acumulado de Rt>1 por 3 vezes
-for(i in 1:10) d2$alertaRtweet[d2$APS==listaAPS[i]] <-Rtgreat1(d2$ptw1[d2$APS==listaAPS[i]],pcrit=0.90,lag=3)
+for(i in 1:10) d2$alertaRtweet[d2$APS==listaAPS[i]] <-Rtgreat1(d2$ptw1[d2$APS==listaAPS[i]],pcrit=0.80,lag=3)
 
 #d2[d2$SE==max(d2$SE),]
 ```
@@ -221,9 +226,7 @@ d2$pRt1 <-NA
 d2$Rtlr <-NA
 d2$Rtur <-NA
 
-for(i in 1:10) d2[d2$APS==listaAPS[i],c("Rt","pRt1","Rtlr","Rtur")] <- Rt.beta((d2$casos[d2$APS==listaAPS[i]]))
-
-#d2[d2$SE==max(d2$SE),]
+for(i in 1:10) d2[d2$APS==listaAPS[i],c("Rt","pRt1","Rtlr","Rtur")] <- Rt.beta((d2$casosm[d2$APS==listaAPS[i]]))
 
 #  imputa os P(Rt) faltantes com p(Rtw)
 d2$pRti <- d2$pRt1
@@ -231,26 +234,25 @@ d2$pRti[is.na(d2$pRt1)]<-d2$ptw1[is.na(d2$pRt1)]
 #d2$Rti <- d2$Rt1
 #d2$Rti[is.na(d2$Rt)]<-d2$Rtw[is.na(d2$Rt)]
 
+
 # Rt(dengue) > 1 se Pr>0.9 
-for(i in 1:10) d2$Rtgreat1[d2$APS==listaAPS[i]] <-Rtgreat1(d2$pRti[d2$APS==listaAPS[i]],pcrit=0.90,lag=0)
+for(i in 1:10) d2$Rtgreat1[d2$APS==listaAPS[i]] <-Rtgreat1(d2$pRti[d2$APS==listaAPS[i]],pcrit=0.80,lag=0)
 
 # alertaRt = acumulado de Rt>1 por 3 vezes
-for(i in 1:10) d2$alertaRt[d2$APS==listaAPS[i]] <-Rtgreat1(d2$pRti[d2$APS==listaAPS[i]],pcrit=0.90,lag=3)
-
-#d2[d2$SE==max(d2$SE),]
+for(i in 1:10) d2$alertaRt[d2$APS==listaAPS[i]] <-Rtgreat1(d2$pRti[d2$APS==listaAPS[i]],pcrit=0.80,lag=3)
 ```
-
-**Grafico de Prob(Rt > 1)**
 
 ```{r  echo=FALSE}
 # Grafico de Rt(dengue). 
-par(mfrow=c(5,2),mar=c(1,2,1,1))
+par(mfrow=c(2,5),mar=c(3,2,1,1))
 for (j in 1:10) {
-      plot(d2$pRt1[d2$APS==listaAPS[j]],ylim=range(0,1),xlab="",ylab="Rt",axes=FALSE,type="l")
+      plot(231:251,d2$Rtlr[d2$APS==listaAPS[j]][231:251],lty=1,ylim=range(0,3),xlab="",ylab="Rt",axes=FALSE,type="l")
+      
+      polygon(c(231:251,251:231),c(d2$Rtlr[d2$APS==listaAPS[j]][231:251],rev(d2$Rtur[d2$APS==listaAPS[j]][231:251])),col="grey")
       axis(2)
       mtext(listaAPS[(j)],cex=0.8,line=-1)
       box()
-      abline(h=0.8,col=2)
+      abline(h=0.9,col=2,lwd=3)
       }
 ```
 
@@ -275,41 +277,110 @@ d2$alertaCasos <- as.numeric(d2$inc>100)
 
 ```
 
-**Alerta por APS**
+
+Alerta por APS
+==============
 
 Para cada APS, indica-se as semanas em que houve alerta de temperatura, de Rt e de casos.
 ```{r echo=FALSE}
 
 le = length(d2$temp.min[d2$APS==listaAPS[1]])
 
-plot.alerta2<-function(ap){
-      par(mai=c(0,0,0,0),mar=c(4,4,1,1))
+def.cor<-function(d2v){
+# d2v = dados de uma ap
+      # 1 = verde, 2=amarelo, 3 =laranja, 4 = vermelho
+      les = dim(d2v)[1]
+      d2v$cor <-NA
+      d2v$cor[intersect(6:les,which(d2v$alertaCli<3 & d2v$alertaRtweet<3 & d2v$alertaRt<3 & d2v$alertaCasos==0))]<-1
+      d2v$cor[intersect(6:les,which(d2v$alertaCli>=3 | d2v$alertaRtweet>=3))]<-2
+      d2v$cor[intersect(6:les,which(d2v$alertaRt>=3))]<-3
+      d2v$cor[intersect(6:les,which(d2v$alertaRt>=3)+1)]<-3 # inercia para desligar
+      d2v$cor[intersect(6:les,which(d2v$alertaRt>=3)+2)]<-3 # inercia para desligar
+      d2v$cor[intersect(6:les,which(d2v$alertaRt>=3)+3)]<-3 # inercia para desligar
+      d2v$cor[intersect(6:les,which(d2v$alertaCasos==1))]<-4
+      d2v$cor[intersect(6:les,which(d2v$alertaCasos==1)+1)]<-4  # inercia para desligar
+      d2v$cor[intersect(6:les,which(d2v$alertaCasos==1)+2)]<-4   # inercia para desligar
+      d2v$cor[intersect(6:les,which(d2v$alertaCasos==1)+3)]<-4
+      d2v
+}
+
+d2$cor<-NA
+for(i in 1:10) d2[d2$APS==listaAPS[i],]<-def.cor(d2[d2$APS==listaAPS[i],])
+
+tail(d2)
+
+plot.alerta<-function(ap){
+      par(mai=c(0,0,0,0),mar=c(4,1,1,1))
       d2v <- subset(d2,APS==ap)[52:le,]
       les = dim(d2v)[1]
-      plot(1:les,d2v$casos,type="l",axes=FALSE,ylab="casos",xlab="")
+      plot(1:les,d2v$casos,type="l",axes=FALSE,ylab="",xlab="")
       abline(v=which(d2v$alertaCli<3 & d2v$alertaRtweet<3 & d2v$alertaRt<3 & d2v$alertaCasos==0),
-             col="darkgreen",lwd=1)
-      abline(v=which(d2v$alertaCli>=3 | d2v$alertaRtweet>=3),col="yellow",lwd=1)
-      abline(v=which(d2v$alertaRt>=3),col="orange")
+             col="darkgreen",lwd=2)
+      abline(v=which(d2v$alertaCli>=3 | d2v$alertaRtweet>=3),col="yellow",lwd=2)
+      vl = which(d2v$alertaRt>=3)
+      abline(v=vl,col="orange",lwd=2)
+      abline(v=(vl+1),col="orange",lwd=2)
+      abline(v=(vl+2),col="orange",lwd=2)
+      abline(v=(vl+3),col="orange",lwd=2)
       lines(1:les,d2v$casos)
-      abline(v=which(d2v$inc>=100),col="red",pch=16)
+      v=which(d2v$alertaCasos==1)
+      abline(v=v,col="red",pch=16,lwd=2)
+      abline(v=(v+1),col="red",pch=16,lwd=2)
+      abline(v=(v+2),col="red",pch=16,lwd=2)
       title(as.character(ap),cex=1.4)
       axis(2)
-      axis(1,at=rev(seq(les,1,by=-12)),labels=d2v$SE[rev(seq(les,1,by=-12))],las=2,cex=0.3)
+      axis(1,at=rev(seq(les,1,by=-16)),labels=d2v$SE[rev(seq(les,1,by=-16))],las=2,cex=0.3)
+      lines(1:les,d2v$casos,lwd=2)
+}
+
+plot.alerta2<-function(ap){
+      par(mai=c(0,0,0,0),mar=c(4,1,1,1))
+      d2v <- subset(d2,APS==ap)[52:le,]
+      les = dim(d2v)[1]
+      plot(1:les,d2v$casos,type="l",axes=FALSE,ylab="",xlab="")
+      abline(v=which(d2v$cor==1),col="darkgreen",lwd=2)
+      abline(v=which(d2v$cor==2),col="yellow",lwd=2)
+      abline(v=which(d2v$cor==3),col="orange",lwd=2)
+      abline(v=which(d2v$cor==4),col="red",lwd=2)
+      title(as.character(ap),cex=1.4)
+      axis(2)
+      axis(1,at=rev(seq(les,1,by=-16)),labels=d2v$SE[rev(seq(les,1,by=-16))],las=2,cex=0.3)
       lines(1:les,d2v$casos,lwd=2)
 }
 
 par(mfrow=c(5,2))
 for(i in 1:10) {
-      print(as.character(listaAPS[i]))
-      print(tail(d2[d2$APS==listaAPS[i],c("SE","APS","alertaCli","alertaRtweet","alertaRt","alertaCasos")],n=8))
+#      print(as.character(listaAPS[i]))
+#      print(tail(d2[d2$APS==listaAPS[i],c("SE","APS","alertaCli","alertaRtweet","alertaRt","alertaCasos")],n=8))
       plot.alerta2(listaAPS[i])
 }
 
-tiff("alerta.tif",res=200,compression = "lzw",width = 15,height = 22,units="cm")
-  layout(matrix(1:10,nrow = 5),widths = rep(lcm(7),2),heights = rep(lcm(4)))
+par(mfrow=c(1,1))
+plot.alerta2("AP3.3")
+
+#tiff("alerta.tif",res=200,compression = "lzw",width = 22,height = 15,units="cm")
+#  layout(matrix(1:10,nrow = 2),widths = rep(lcm(4),5),heights = rep(lcm(7),2))
+#  for(i in 1:10) plot.alerta2(listaAPS[i])
+#dev.off()
+
+#par(mfrow=c(1,1),mar=c(4,4,2,2))
+#plot.alerta2(listaAPS[3])
+
+png("alerta.png",res=200,width = 22,height = 15,units="cm")
+  layout(matrix(1:10,nrow = 2),widths = rep(lcm(4),5),heights = rep(lcm(7),2))
   for(i in 1:10) plot.alerta2(listaAPS[i])
 dev.off()
+
+```
+
+```{r echo=FALSE}
+
+# graficos extras
+#plot(d2$Rtw[(2870-20):2870],type="l",ylim=c(0,2),ylab="Rt(tweets)",xlab="últimas semanas")
+#lines(d2$Rtwlr[(2870-20):2870],type="l",lty=2)
+#lines(d2$Rtwur[(2870-20):2870],type="l",lty=2)
+#abline(h=1,col=2)
+
 
 ```
 
